--- a/src/index.ejs
+++ b/src/index.ejs
@@ -30,7 +30,14 @@
 <body>
   <div data-widget-host="habitat" class="preview">
     <script type="text/props">
-      { "color": "red"}
+      {
+        "apiKey": "***REMOVED***",
+        "authDomain": "***REMOVED***",
+        "databaseURL": "***REMOVED***",
+        "projectId": "***REMOVED***",
+        "storageBucket": "***REMOVED***",
+        "messagingSenderId": "***REMOVED***"
+      }
     </script>
   </div>
   <script async src="/bundle.js"></script>
