Separate styles and remove unused props

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -32,11 +32,7 @@
     <script type="text/props">
       {
         "apiKey": "***REMOVED***",
-        "authDomain": "***REMOVED***",
-        "databaseURL": "***REMOVED***",
-        "projectId": "***REMOVED***",
-        "storageBucket": "***REMOVED***",
-        "messagingSenderId": "***REMOVED***"
+        "databaseURL": "***REMOVED***"
       }
     </script>
   </div>
