Rename data attribute used as selector

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <div data-widget-host="habitat" class="preview">
+  <div data-widget-sldrx="client" class="preview">
     <script type="text/props">
       {
         "apiKey": "***REMOVED***",
