--- a/src/index.ejs
+++ b/src/index.ejs
@@ -28,6 +28,15 @@
 </head>
 
 <body>
+  <div data-widget-sldrx="master" class="preview">
+    <script type="text/props">
+      {
+        "apiKey": "***REMOVED***",
+        "databaseURL": "***REMOVED***"
+      }
+    </script>
+  </div>
+
   <div data-widget-sldrx="client" class="preview">
     <script type="text/props">
       {
