Make fontSize configurable

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -32,7 +32,8 @@
     <script type="text/props">
       {
         "apiKey": "***REMOVED***",
-        "databaseURL": "***REMOVED***"
+        "databaseURL": "***REMOVED***",
+        "fontSize": "30px"
       }
     </script>
   </div>
@@ -41,7 +42,8 @@
     <script type="text/props">
       {
         "apiKey": "***REMOVED***",
-        "databaseURL": "***REMOVED***"
+        "databaseURL": "***REMOVED***",
+        "fontSize": "30px"
       }
     </script>
   </div>
