Add emojis prop for the widget to define reactions to use

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,6 +33,7 @@
       {
         "apiKey": "<%= process.env.FIREBASE_API_KEY %>",
         "databaseURL": "<%= process.env.FIREBASE_DB_URL %>",
+        "emojis": ["🦄", "🤯", "❤️", "🤔"],
         "fontSize": "30px"
       }
     </script>
@@ -43,6 +44,7 @@
       {
         "apiKey": "<%= process.env.FIREBASE_API_KEY %>",
         "databaseURL": "<%= process.env.FIREBASE_DB_URL %>",
+        "emojis": ["🦄", "🤯", "❤️", "🤔"],
         "fontSize": "30px"
       }
     </script>
