--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,6 +34,7 @@
         "apiKey": "<%= process.env.FIREBASE_API_KEY %>",
         "databaseURL": "<%= process.env.FIREBASE_DB_URL %>",
         "emojis": ["🦄", "🤯", "❤️", "🤔"],
+        "url": "http://google.co",
         "fontSize": "30px"
       }
     </script>
