--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Widget Template</title>
+  <title>SldRX</title>
 
   <style>
     .preview {
